fixed scrolling issue, working on spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -17,15 +17,17 @@
 	min-height: 790px;
 	width: 1000px;
 }
+#members {
+	padding-bottom: 30px;
+}
 .section-title {
         text-align: center;
-        padding-top: 250px;
-        color: rgb(100, 165, 230);
+        padding-top: 125px;
 }
 #about-us-main {
 	min-height: 590 px;
 }
-#about-us {
+#jumbo {
 	background-color: rgb(100, 165, 230);
 	margin-top: 15 px;
     text-align: left;
@@ -40,7 +42,7 @@
 }
 .footer {
 	background-color: rgb(100, 165, 230);
-	height: 150px;
+	min-height: 790px;
 	color: white;
 }
 .social-reverse {
